# cells-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deployment.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml
migrations/: env.py
migrations/versions/: 4861746707b0_add_users_table.py  e788224f51ed_initial_tables.py  f4b0b6b708db_models.py  fe8022af6e6c_initial_rev.py
src/: app.py  deps.py  settings.yml
src/clients/: vertex.py
src/core/: config.py  deps.py  security.py
src/db/: database.py  items.py  model_versions.py  models.py  users.py
src/exceptions/: database.py
src/managers/: items.py  model_versions.py  models.py  users.py
src/models/: items.py  models.py  users.py
src/routes/: items.py  login.py  models.py  predicts.py  users.py
src/schemas/: auth.py  items.py  models.py  predicts.py  users.py
tests/integration/: conftest.py  test_auth.py  test_model.py  test_model_version.py  test_user.py
